@@ -51,6 +51,7 @@ export(etox_tests)
 export(extr_num)
 export(get_cid)
 export(get_csid)
+export(get_dbid)
 export(get_etoxid)
 export(get_wdid)
 export(inchikey)
